[package]
name = "intrepid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]

anyhow = "1.0.68"

[[bin]]
name = "n"
path = "./src/node.rs"


[[bin]]
name = "main"
path = "./src/main.rs"
